# whisper

./: README.md  model_config.toml  pyproject.toml
dorsal_whisper/: model.py
tests/: test_model.py
